tests/baselines/reference/destructuringTypeAssertionsES5_7(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
destructuringTypeAssertionsES5_7.ts(1,27): error TS2304: Cannot find name 'Foo'.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== destructuringTypeAssertionsES5_7.ts (1 errors) ====
    var { x } = <any><any>new Foo;
                              ~~~
!!! error TS2304: Cannot find name 'Foo'.